RESOLVED FIXED99320
GraphicsSurface should not modify the current GL context.
https://bugs.webkit.org/show_bug.cgi?id=99320
Summary GraphicsSurface should not modify the current GL context.
Zeno Albisser
Reported 2012-10-15 06:31:58 PDT
GraphicsSurface should not modify the current GL context.
Attachments
Patch (23.75 KB, patch)
2012-10-15 06:47 PDT, Zeno Albisser
noam: review+
zeno: commit-queue-
Patch for review. - disable QCocoaNativeInterface code path until next Qt5 update. (2.52 KB, patch)
2012-10-16 04:29 PDT, Zeno Albisser
noam: review+
zeno: commit-queue-
Zeno Albisser
Comment 1 2012-10-15 06:47:42 PDT
Zeno Albisser
Comment 2 2012-10-15 06:49:33 PDT
This patch depends on a commit to Qt5/qtbase which is currently staging, but not landed yet. Therefore compilation might fail on Mac. https://codereview.qt-project.org/#change,37168
Noam Rosenthal
Comment 3 2012-10-15 08:04:22 PDT
Comment on attachment 168704 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=168704&action=review > Source/WebCore/platform/graphics/surfaces/GraphicsSurface.h:88 > + static PassRefPtr<GraphicsSurface> platformCreate(const PlatformGraphicsContext3D, const IntSize&, Flags); Nit: since the context is more of an optional parameter, it should be at the end.
Zeno Albisser
Comment 4 2012-10-16 04:29:36 PDT
Created attachment 168917 [details] Patch for review. - disable QCocoaNativeInterface code path until next Qt5 update. This patch might not apply, as it depends on Patch: 168794.
Zeno Albisser
Comment 5 2012-10-16 04:30:13 PDT
(In reply to comment #3) > (From update of attachment 168704 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=168704&action=review > > > Source/WebCore/platform/graphics/surfaces/GraphicsSurface.h:88 > > + static PassRefPtr<GraphicsSurface> platformCreate(const PlatformGraphicsContext3D, const IntSize&, Flags); > > Nit: since the context is more of an optional parameter, it should be at the end. Sure, i'll adjust that before landing.
Zeno Albisser
Comment 6 2012-10-18 02:44:25 PDT
Zeno Albisser
Comment 7 2012-10-18 02:48:20 PDT
Note You need to log in before you can comment on or make changes to this bug.